# OVGE

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/Device/: Device.hpp
include/ValidationLayers/: ValidationLayers.hpp
include/Window/: BaseWindow.hpp
src/: main.cpp
src/Device/: Device.cpp
src/Shapes/: Triangle.cpp
src/Window/: BaseWindow.cpp
